# workmanship

./: .gitignore  CHANGES.md  README.md  pyproject.toml
src/workmanship/: __init__.py  __main__.py  data.yml  lessons.py  lessons.yml  textmenus.py
tests/: test_textmenus.py  test_workmanship.py
